@@ -83,9 +83,9 @@ final class GraphConverter {
                     redirects.add((graph, root) -> {
                         var sender = player == null ? MinecraftServer.getCommandManager().getConsoleSender() : player;
                         final List<Argument<?>> args = CommandParser.parser().parse(sender, graph, shortcut).args();
-                        final Argument<?> last = args.get(args.size() - 1);
+                        final Argument<?> last = args.getLast();
                         if (last.allowSpace()) {
-                            node.redirectedNode = argToPacketId.get(args.get(args.size()-2));
+                            node.redirectedNode = argToPacketId.get(args.get(args.size() - 2));
                         } else {
                             node.redirectedNode = argToPacketId.get(last);
                         }
